<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="20dp"
    android:backgroundTint="#DDDDDD"
    android:elevation="20dp"
    app:cardCornerRadius="30sp"
    tools:context=".VetRegisterActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="Doctor Login"
        android:textColor="#232121"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="@color/ap_transparent"
        android:elevation="100dp"
        app:cardCornerRadius="100dp"/>
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/emailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/passwordText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#101010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="202dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="#FF5722"
        android:text="@string/btLogin"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="410dp"
        android:text="@string/no_account"
        android:textColor="#020202"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />


</androidx.cardview.widget.CardView>