<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F4F0F0"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ClientSelectServiceActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/headerFrame"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCardHeader">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            app:cardElevation="15dp"
            app:cardCornerRadius="15sp"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="#673AB7"
                android:text="@string/add_service"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FrameContent"
        app:layout_constraintTop_toBottomOf="@id/headerFrame"
        android:layout_marginTop="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10sp"
            android:layout_height="260dp">
            <TextView
                android:id="@+id/tvAge2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginStart="15dp"
                android:text="@string/service"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />


            <TextView
                android:id="@+id/tvCategory2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/category"
                android:textSize="18sp"
                android:textStyle="bold"
            />
            <Spinner
                android:id="@+id/spCategory"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:entries="@array/animal_category"
                android:layout_marginTop="5dp"
                android:layout_marginStart="150dp"
                android:hint="@string/emailText"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toEndOf="@+id/tvCategory2"
                app:layout_constraintTop_toBottomOf="@+id/headerFrame" />

            <TextView
                android:id="@+id/tvSex2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="60dp"
                android:text="@string/sex"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginStart="15dp"
                android:text="@string/age"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSex2" />


            <Spinner
                android:id="@+id/spSex"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="55dp"
                android:hint="@string/passwordText"
                android:layout_marginStart="150dp"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                />
            <EditText
                android:id="@+id/edAge"
                android:layout_width="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_height="40dp"
                android:hint="Enter Age"
                android:layout_marginTop="110dp"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/tvAge"
                app:layout_constraintTop_toBottomOf="@+id/spSex" />
            <TextView
                android:id="@+id/tvAge3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="210dp"
                android:textColor="#000000"
                android:text="@string/detail"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/spServices"
                android:layout_width="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_height="40dp"
                android:hint="@string/passwordText"
                android:importantForAutofill="no"
                android:layout_marginTop="160dp"
                android:inputType="numberPassword"
                app:layout_constraintStart_toEndOf="@+id/tvAge2"
                app:layout_constraintTop_toBottomOf="@+id/edAge" />
            <EditText
                android:id="@+id/edIssue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Describe Issue"
                android:layout_marginStart="150dp"
                android:layout_marginTop="210dp"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintStart_toEndOf="@+id/tvAge3"
                app:layout_constraintTop_toBottomOf="@+id/spServices"
                tools:ignore="HardcodedText" />
        </androidx.cardview.widget.CardView>

    </FrameLayout>
<FrameLayout
    android:layout_marginTop="10dp"
    android:id="@+id/FramePhoto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:layout_constraintTop_toBottomOf="@id/FrameContent">

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="137dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10sp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/tvAge4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/photo"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge3" />

        <ImageView
            android:id="@+id/servicePhoto"
            android:layout_width="288dp"
            android:layout_height="119dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/image"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/FrameContent"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>
</FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="-20dp"
        android:elevation="20dp"
        app:cardCornerRadius="15sp"
        android:backgroundTint="#673AB7"
        android:id="@+id/tvCardHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="82dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/doc"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tvHeader2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Dr"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/tvDocName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Mulama"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
    </androidx.cardview.widget.CardView>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRequest"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:cornerRadius="15dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF5722"
        android:text="@string/add_request"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FramePhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>